--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "@actions/core": "^1.4.0",
     "@actions/github": "^5.0.0",
     "@notionhq/client": "^0.2.4",
-    "dayjs": "^1.10.6",
-    "dotenv": "^10.0.0",
-    "dotenv-json": "^1.0.0"
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.29.0"
