--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,8 @@
 name: 'Notion Advent-Calendar Action'
 description: "This is the action to add an article to Notion's calendar by utilizing Notion API."
+branding:
+  icon: book-open
+  color: white
 runs:
   using: 'node12'
   main: 'dist/index.js'
